projects/cms/bugtracker-service/k8s-config/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bugtracker
  name: bugtracker
  namespace: cms-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bugtracker
  template:
    metadata:
      labels:
        app: bugtracker
    spec:
      containers:
        - image: registry.coherent.in/cms-bugtracker-service:10
          resources:
            requests:
              cpu: "100m"
              memory: "1500Mi"
            limits:
              cpu: "2000m"
              memory: "4096Mi"
          imagePullPolicy: Always
          name: bugtracker
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8013
            failureThreshold: 30
            periodSeconds: 10
      imagePullSecrets:
      - name: registry-regcred
